--- a/index.html
+++ b/index.html
@@ -21,6 +21,42 @@
       min-height: 100vh;
     }
 
+    
+      .radio-shell {
+      --gap: 10px;                 /* thickness of the faux border */
+      --outer-bg: #2c2e34;         /* color of the faux border (outer card) */
+      --inner-bg: #0b0c10;         /* inner card background (same family as site) */
+      --radius: 14px;              /* overall roundness */
+      --shadow: 0 10px 26px rgba(0,0,0,.3);
+      max-width: 560px;
+      margin: 1.5rem auto;         /* space around the whole component */
+      padding: var(--gap);
+      background: var(--outer-bg); /* this is the visible “border” */
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+    }
+
+    .radio-card {
+    background: var(--inner-bg);
+    border: 1px solid rgba(255,255,255,.08);
+    border-radius: calc(var(--radius) - 2px);
+    padding: 14px;               /* space between inner edge and iframe */
+  }
+
+  .radio-card iframe {
+    display: block;
+    width: 100%;
+    height: 110px;               /* 110 = compact; 140 = taller */
+    border: 0;
+    border-radius: 10px;
+    background: #000;            /* behind the player UI */
+  }
+
+  @media (max-width: 600px){
+    .radio-shell { --gap: 8px; }
+    .radio-card { padding: 12px; }
+  }
+
     /* ==== Navbar ==== */
     nav {
       width: 100%;
@@ -138,9 +174,15 @@
   </section>
 
   <!-- ===== RADIO PLAYER ===== -->
-  <div class="radio-player">
-    <!-- Replace this with your local web radio stream URL -->
-    <iframe src="http://localhost:8000/stream" title="Tech Radio Player"></iframe>
+  <div class="radio-shell">
+  <div class="radio-card">
+    <iframe
+      title="Tech Radio Player"
+      src="https://exitradio.ddns.net/public/exitradio/embed"
+      allow="autoplay"
+      loading="lazy"
+    ></iframe>
   </div>
+</div>
 </body>
 </html>
