Update title and heading in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tech Radioq</title>
+  <title>Tech Radio</title>
   <style>
     /* ==== Base Styles ==== */
     * {
@@ -169,7 +169,7 @@
 
   <!-- ===== HERO ===== -->
   <section class="hero">
-    <h1>Welcome to Tech Radio</h1>
+    <h1>Welcome to Tech Radio1</h1>
     <p>Streaming high-quality local beats, podcasts, and live events — 24/7 from your browser.</p>
   </section>
 
