Update background colors for radio-shell component

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     
       .radio-shell {
       --gap: 10px;                 /* thickness of the faux border */
-      --outer-bg: #2c2e34;         /* color of the faux border (outer card) */
-      --inner-bg: #0b0c10;         /* inner card background (same family as site) */
+      --outer-bg: #0b0c10;         /* color of the faux border (outer card) */
+      --inner-bg: #000000;         /* inner card background (same family as site) */
       --radius: 14px;              /* overall roundness */
       --shadow: 0 10px 26px rgba(0,0,0,.3);
       max-width: 560px;
